--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <p>WEBSTUDIO</p>
+      <p><span>WEB</span>STUDIO</p>
       <nav>
         <menu>
           <li><a href="/Studio">Studio</a></li>
@@ -17,40 +17,45 @@
           <li><a href="/Contacts">Contacts</a></li>
         </menu>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11(000)_111-11-11">+11(000) 111-11-11</a>
+      <adress>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+11(000)_111-11-11">+11(000) 111-11-11</a>
+      </adress>
     </header>
     <main>
-      <article>
+      <!--section 1-->
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </article>
+      </section>
+      <!--end section 1-->
+
+      <!--section 2-->
       <section class="section">
-        <!--section 1-->
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h2>Strategy</h2>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h2>Punctuality</h2>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h2>Diligence</h2>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h2>Technologies</h2>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -58,9 +63,10 @@
           </li>
         </ul>
       </section>
-      <!--end section 1-->
+      <!--end section 2-->
+
+      <!--section 3-->
       <section class="section">
-        <!--section 2-->
         <h2>What are we doing</h2>
         <ul>
           <li>
@@ -95,9 +101,10 @@
           </li>
         </ul>
       </section>
-      <!--end section 2-->
+      <!--end section 3-->
+
+      <!--section 4-->
       <section class="section">
-        <!--section 3-->
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -142,10 +149,10 @@
           </li>
         </ul>
       </section>
-      <!--end section 3-->
+      <!--end section 4-->
     </main>
     <footer>
-      <p>WEBSTUDIO</p>
+      <p><span>WEB</span>STUDIO</p>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
