--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <li><a href="/Contacts">Contacts</a></li>
         </menu>
       </nav>
-      <adress>
+      <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+11(000)_111-11-11">+11(000) 111-11-11</a>
-      </adress>
+      </address>
     </header>
     <main>
       <!--section 1-->
