--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="descryption" content="webstudio" />
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <p><span>WEB</span>STUDIO</p>
+      <a href="/"><span>WEB</span>STUDIO</a>
       <nav>
         <menu>
           <li><a href="/Studio">Studio</a></li>
@@ -24,9 +24,11 @@
     </header>
     <main>
       <!--section 1-->
-      <section>
+      <section class="section">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <figure>
+          <button type="button">Order Service</button>
+        </figure>
       </section>
       <!--end section 1-->
 
@@ -34,32 +36,48 @@
       <section class="section">
         <ul>
           <li>
-            <h2>Strategy</h2>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
+            <figure>
+              <h2>Strategy</h2>
+              <figcaption>
+                <p>
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </figcaption>
+            </figure>
           </li>
           <li>
-            <h2>Punctuality</h2>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
+            <figure>
+              <h2>Punctuality</h2>
+              <figcaption>
+                <p>
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </figcaption>
+            </figure>
           </li>
           <li>
-            <h2>Diligence</h2>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
+            <figure>
+              <h2>Diligence</h2>
+              <figcaption>
+                <p>
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </figcaption>
+            </figure>
           </li>
           <li>
-            <h2>Technologies</h2>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
+            <figure>
+              <h2>Technologies</h2>
+              <figcaption>
+                <p>
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </figcaption>
+            </figure>
           </li>
         </ul>
       </section>
@@ -108,51 +126,67 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="images/markguerrero.jpg"
-              alt="gentleman with a beard"
-              width="264"
-              height="260"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <figure>
+              <img
+                src="images/markguerrero.jpg"
+                alt="gentleman with a beard"
+                width="264"
+                height="260"
+              />
+              <figcaption>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+              </figcaption>
+            </figure>
           </li>
           <li>
-            <img
-              src="images/tomford.jpg"
-              alt="gentleman with nice hair"
-              width="264"
-              height="260"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <figure>
+              <img
+                src="images/tomford.jpg"
+                alt="gentleman with nice hair"
+                width="264"
+                height="260"
+              />
+              <figcaption>
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+              </figcaption>
+            </figure>
           </li>
           <li>
-            <img
-              src="images/camilagarcia.jpg"
-              alt="nice lady"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <figure>
+              <img
+                src="images/camilagarcia.jpg"
+                alt="nice lady"
+                width="264"
+                height="260"
+              />
+              <figcaption>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
           </li>
           <li>
-            <img
-              src="images/danielwilson.jpg"
-              alt="gentleman wearing a t-shirt"
-              width="264"
-              height="260"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <figure>
+              <img
+                src="images/danielwilson.jpg"
+                alt="gentleman wearing a t-shirt"
+                width="264"
+                height="260"
+              />
+              <figcaption>
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+              </figcaption>
+            </figure>
           </li>
         </ul>
       </section>
       <!--end section 4-->
     </main>
     <footer>
-      <p><span>WEB</span>STUDIO</p>
+      <a href="/"><span>WEB</span>STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
