--- a/index.html
+++ b/index.html
@@ -6,188 +6,182 @@
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>WEB STUDIO</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <a href="/"><span>WEB</span>STUDIO</a>
       <nav>
-        <menu>
-          <li><a href="/Studio">Studio</a></li>
-          <li><a href="/Portfolio">Portfolio</a></li>
-          <li><a href="/Contacts">Contacts</a></li>
-        </menu>
+        <a class="logo logo-header-color link" href="/"
+          >WEB<span class="web">Studio</span></a
+        >
+        <ul class="list">
+          <li>
+            <a class="subpage link" href="./index.html" target="_parent"
+              >Studio</a
+            >
+          </li>
+          <li>
+            <a class="subpage link" href="./portfolio.html" target="_parent"
+              >Portfolio</a
+            >
+          </li>
+          <li><a class="subpage link" href="">Contacts</a></li>
+        </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11(000)_111-11-11">+11(000) 111-11-11</a>
+      <address class="link contacts">
+        <ul class="list">
+          <li>
+            <a class="contacts link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contacts link" href="tel:+11(000)_111-11-11"
+              >+11(000) 111-11-11</a
+            >
+          </li>
+        </ul>
       </address>
     </header>
     <main>
       <!--section 1-->
-      <section class="section">
-        <h1>Effective Solutions for Your Business</h1>
-        <figure>
-          <button type="button">Order Service</button>
-        </figure>
+      <section class="page-part-one">
+        <h1 class="title-one">Effective Solutions for Your Business</h1>
+        <button class="push" type="button">Order Service</button>
       </section>
       <!--end section 1-->
 
       <!--section 2-->
-      <section class="section">
-        <ul>
+      <section>
+        <h2>Hidden title</h2>
+        <ul class="list">
           <li>
-            <figure>
-              <h2>Strategy</h2>
-              <figcaption>
-                <p>
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </figcaption>
-            </figure>
+            <h3 class="title-three visually-hidden">Strategy</h3>
+            <p class="text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li>
-            <figure>
-              <h2>Punctuality</h2>
-              <figcaption>
-                <p>
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </figcaption>
-            </figure>
+            <h3 class="title-three visually-hidden">Punctuality</h3>
+            <p class="text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li>
-            <figure>
-              <h2>Diligence</h2>
-              <figcaption>
-                <p>
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </figcaption>
-            </figure>
+            <h3 class="title-three visually-hidden">Diligence</h3>
+            <p class="text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li>
-            <figure>
-              <h2>Technologies</h2>
-              <figcaption>
-                <p>
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </figcaption>
-            </figure>
+            <h3 class="title-three visually-hidden">Technologies</h3>
+            <p class="text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
       <!--end section 2-->
 
       <!--section 3-->
-      <section class="section">
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="page-part-three">
+        <h2 class="title-two">What are we doing</h2>
+        <ul class="list">
           <li>
-            <figure class="figure2">
-              <img
-                src="images/screen.jpg"
-                alt="Computer screen with open webpage."
-                width="360"
-                height="300"
-              />
-            </figure>
+            <img
+              src="images/screen.jpg"
+              alt="Computer screen with open webpage."
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <figure class="figure2">
-              <img
-                src="images/smartphone.jpg"
-                alt="Smartphone with open webpage"
-                width="360"
-                height="300"
-              />
-            </figure>
+            <img
+              src="images/smartphone.jpg"
+              alt="Smartphone with open webpage"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <figure class="figure2">
-              <img
-                src="images/laptopandphone.jpg"
-                alt="Laptop and smartphone with open pages"
-                width="360"
-                height="300"
-              />
-            </figure>
+            <img
+              src="images/laptopandphone.jpg"
+              alt="Laptop and smartphone with open pages"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
       <!--end section 3-->
 
       <!--section 4-->
-      <section class="section">
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <figure>
-              <img
-                src="images/markguerrero.jpg"
-                alt="gentleman with a beard"
-                width="264"
-                height="260"
-              />
-              <figcaption>
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+      <section class="page-part-four">
+        <h2 class="title-two">Our Team</h2>
+        <ul class="list">
+          <li class="page-part-four-figure">
+            <img
+              class="page-part-four-figure"
+              src="images/markguerrero.jpg"
+              alt="gentleman with a beard"
+              width="264"
+              height="260"
+            />
+            <h3 class="title-three">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
-          <li>
-            <figure>
-              <img
-                src="images/tomford.jpg"
-                alt="gentleman with nice hair"
-                width="264"
-                height="260"
-              />
-              <figcaption>
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+          <li class="page-part-four-figure">
+            <img
+              class="page-part-four-figure"
+              src="images/tomford.jpg"
+              alt="gentleman with nice hair"
+              width="264"
+              height="260"
+            />
+            <h3 class="title-three">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li>
-            <figure>
-              <img
-                src="images/camilagarcia.jpg"
-                alt="nice lady"
-                width="264"
-                height="260"
-              />
-              <figcaption>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+          <li class="page-part-four-figure">
+            <img
+              class="page-part-four-figure"
+              src="images/camilagarcia.jpg"
+              alt="nice lady"
+              width="264"
+              height="260"
+            />
+            <h3 class="title-three">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
-          <li>
-            <figure>
-              <img
-                src="images/danielwilson.jpg"
-                alt="gentleman wearing a t-shirt"
-                width="264"
-                height="260"
-              />
-              <figcaption>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+          <li class="page-part-four-figure">
+            <img
+              class="page-part-four-figure"
+              src="images/danielwilson.jpg"
+              alt="gentleman wearing a t-shirt"
+              width="264"
+              height="260"
+            />
+            <h3 class="title-three">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
       <!--end section 4-->
     </main>
-    <footer>
-      <a href="/"><span>WEB</span>STUDIO</a>
-      <p>
+    <footer class="footer-style">
+      <a class="logo link" href="/"
+        >WEB<span class="logo-footer-color">Studio</span></a
+      >
+      <p class="footer-style">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
